# comfoair-mqtt-bridge

./: LICENSE  README.md  comfoair-mqtt-bridge.py  comfoair-mqtt-bridge.service  config.json  pyproject.toml  requirements.txt
comfoair_mqtt_bridge/: bridge.py  cli.py
